--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -163,5 +163,7 @@ body * {
 @import "home";
 // PARTNERS
 @import "partners";
-//NEWS PAGE
+// NEWS PAGE
 @import "news";
+// ARTICLE PAGE
+@import "article";
