--- a/src/css/main.css
+++ b/src/css/main.css
@@ -290,7 +290,7 @@ body * {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     max-width: 800px;
-    padding: 20px 0 10px 0;
+    padding: 0 0 10px 0;
     margin: 0 auto;
     font-size: 24px; }
   .footer-left {
@@ -306,15 +306,16 @@ body * {
         -ms-flex-pack: center;
             justify-content: center; }
     .footer-left img {
-      width: 200px;
+      width: 250px;
       height: auto;
-      padding-left: 20px; }
+      padding: 0 5px; }
     .footer-left span {
       padding: 20px 0;
       text-shadow: -3px 4px 8px rgba(0, 0, 0, 0.6); }
   .footer-right {
     color: #fff;
-    text-shadow: -3px 4px 8px rgba(0, 0, 0, 0.6); }
+    text-shadow: -3px 4px 8px rgba(0, 0, 0, 0.6);
+    padding-top: 40px; }
     .footer-right p {
       padding: 0 0 13px 0; }
     .footer-right a {
@@ -346,10 +347,11 @@ body * {
     font-size: 18px;
     padding: 10px 0 5px 0; }
   .footer-left img {
-    width: 150px;
-    padding-left: 15px; }
+    width: 200px; }
   .footer-left span {
     padding: 15px 0; }
+  .footer-right {
+    padding-top: 30px; }
   .footer-social .facebook span,
   .footer-social .instagram span {
     zoom: 0.8; } }
@@ -362,10 +364,11 @@ body * {
         -ms-flex-align: center;
             align-items: center; }
     .footer-left img {
-      width: 100px;
-      padding-left: 10px; }
+      width: 150px; }
     .footer-left span {
       padding: 10px 0; }
+  .footer-right {
+    padding-top: 20px; }
   .footer-social .facebook span,
   .footer-social .instagram span {
     zoom: 0.7; } }
@@ -888,3 +891,196 @@ body * {
       text-align: center; }
     .article h2 {
       font-size: 18px; } }
+
+.about {
+  display: none; }
+  .about-content {
+    padding: 20px !important; }
+  .about-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+  .about-logo {
+    width: 400px;
+    height: auto;
+    margin-right: 50px; }
+    .about-logo img {
+      width: 100%;
+      height: auto; }
+  .about-description p {
+    margin: 30px 0;
+    padding: 20px;
+    background: #2e9100;
+    color: #fff;
+    font-size: 24px;
+    text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: -3px 3px 2px 0px rgba(0, 0, 0, 0.3);
+            box-shadow: -3px 3px 2px 0px rgba(0, 0, 0, 0.3); }
+  .about h2 {
+    color: #003b01;
+    font-size: 36px;
+    text-align: center; }
+  .about h3 {
+    color: #2e9100;
+    font-size: 36px;
+    text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
+    padding-left: 20px; }
+  .about-contacts-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    max-width: 820px;
+    padding: 30px 10px;
+    margin: 0 auto; }
+  .about-contacts {
+    padding: 30px 0; }
+  .about-social {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .about-social span {
+      display: inline-block;
+      height: 60px;
+      width: 60px; }
+    .about-social a {
+      font-size: 24px;
+      color: #003b01;
+      padding-left: 20px;
+      text-decoration: none; }
+    .about-social._email span {
+      background: url("../images/sprite.png") -45px 6px;
+      width: 50px;
+      margin-left: 10px; }
+    .about-social._fb span {
+      width: 40px;
+      margin-left: 20px;
+      background: url("../images/sprite.png") -99px -8px; }
+    .about-social._tel span {
+      background: url("../images/sprite.png") 11px -6px;
+      margin-right: 5px;
+      width: 55px; }
+    .about-social._insta span {
+      width: 45px;
+      margin-left: 15px;
+      background: url("../images/sprite.png") -141px 6px; }
+    .about-social:hover {
+      cursor: pointer; }
+      .about-social:hover span, .about-social:hover a {
+        opacity: 0.8; }
+    .about-social:nth-child(even) {
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end; }
+  @media only screen and (min-width: 768px) and (max-width: 1100px) {
+    .about .about-content {
+      padding: 20px; }
+    .about .about-contacts {
+      padding: 20px 0; }
+    .about .about-logo {
+      width: 300px;
+      margin-right: 15px; }
+    .about .about-description p {
+      font-size: 18px;
+      padding: 15px;
+      margin: 20px 0; }
+    .about h2, .about h3 {
+      font-size: 24px;
+      padding-left: 15px; }
+    .about .about-social {
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      .about .about-social span {
+        zoom: 0.8; }
+      .about .about-social a {
+        font-size: 18px;
+        padding-left: 15px; } }
+  @media only screen and (min-width: 451px) and (max-width: 767px) {
+    .about .about-section {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .about .about-content {
+      padding: 15px; }
+    .about .about-contacts {
+      padding: 15px 0; }
+    .about .about-logo {
+      width: 100%;
+      max-width: 350px;
+      margin: 0 auto; }
+    .about .about-description p {
+      font-size: 16px;
+      padding: 10px;
+      margin: 10px 0; }
+    .about h3 {
+      font-size: 18px;
+      padding-left: 10px; }
+    .about .about-social {
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start; }
+      .about .about-social span {
+        zoom: 0.7; }
+      .about .about-social._email span {
+        zoom: 0.6;
+        margin: 0;
+        width: 60px;
+        background: url("../images/sprite.png") -43px 6px; }
+      .about .about-social a {
+        font-size: 18px;
+        padding-left: 10px; }
+    .about .about-social {
+      width: 50%; } }
+  @media only screen and (max-width: 450px) {
+    .about .about-social {
+      width: 100%; }
+    .about .about-section {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .about .about-content {
+      padding: 15px; }
+    .about .about-contacts {
+      padding: 15px 0; }
+    .about .about-logo {
+      width: 100%;
+      max-width: 350px;
+      margin: 0 auto; }
+    .about .about-description p {
+      font-size: 16px;
+      padding: 10px;
+      margin: 10px 0; }
+    .about h3 {
+      font-size: 18px;
+      padding-left: 10px; }
+    .about .about-social {
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start; }
+      .about .about-social span {
+        zoom: 0.7; }
+      .about .about-social._email span {
+        zoom: 0.6;
+        margin: 0;
+        width: 60px;
+        background: url("../images/sprite.png") -43px 6px; }
+      .about .about-social a {
+        font-size: 18px;
+        padding-left: 10px; } }
