--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@ $transparent-green: rgba(46, 145, 0, 0.3);
 $font-middle-green: #006302;
 $font-dark-green: #00470a;
 $font-darkest-green: #133a01;
+$font-darkest-contacts: #003b01;
 $font-grey: #a5a5a5;
 
 // reset all default styles:
@@ -167,3 +168,5 @@ body * {
 @import "news";
 // ARTICLE PAGE
 @import "article";
+// ABOUT US PAGE
+@import "about-us";
