--- a/src/scss/_partners.scss
+++ b/src/scss/_partners.scss
@@ -72,7 +72,7 @@
     min-width: 140px;
   }
   .partners-info {
-    padding: 15px;
+    padding: 15px!important;
     text-align: center;
   }
   .partners-name a {
