--- a/src/css/main.css
+++ b/src/css/main.css
@@ -938,15 +938,39 @@ body * {
     .about-logo img {
       width: 100%;
       height: auto; }
-  .about-description p {
-    margin: 30px 0;
-    padding: 20px;
-    background: #2e9100;
+  .about-description .dark-chat-bubble,
+  .about-description .light-chat-bubble {
+    position: relative;
+    margin: 10px 0;
+    font-size: 18px;
+    padding: 15px 10px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    height: auto;
+    width: auto;
+    overflow: hidden; }
+    .about-description .dark-chat-bubble p,
+    .about-description .light-chat-bubble p {
+      height: 100%;
+      display: inline-block;
+      padding: 10px;
+      text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.3); }
+  .about-description .dark-chat-bubble {
     color: #fff;
-    font-size: 24px;
-    text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: -3px 3px 2px 0px rgba(0, 0, 0, 0.3);
-            box-shadow: -3px 3px 2px 0px rgba(0, 0, 0, 0.3); }
+    background: #2e9100;
+    border-bottom-left-radius: 15px;
+    -webkit-box-shadow: inset 0px 0px 22px 1px #fff;
+            box-shadow: inset 0px 0px 22px 1px #fff;
+    border: 1px solid #2e9100; }
+  .about-description .light-chat-bubble {
+    color: #133a01;
+    border: #2e9100;
+    background: #fafafa;
+    border-bottom-right-radius: 15px;
+    border: 1px solid #2e9100;
+    display: inline-block;
+    -webkit-box-shadow: inset 0px 0px 33px 1px #2e9100;
+            box-shadow: inset 0px 0px 33px 1px #2e9100; }
   .about h2 {
     color: #003b01;
     font-size: 36px;
@@ -1022,10 +1046,6 @@ body * {
     .about .about-logo {
       width: 300px;
       margin-right: 15px; }
-    .about .about-description p {
-      font-size: 18px;
-      padding: 15px;
-      margin: 20px 0; }
     .about h2, .about h3 {
       font-size: 24px;
       padding-left: 15px; }
@@ -1145,39 +1165,28 @@ body * {
     height: 300px;
     position: relative;
     width: 300px;
-    padding: 15px;
+    padding: 25px 15px 15px 15px;
     margin-bottom: 40px;
-    -webkit-box-shadow: inset 0px 2px 7px 0px rgba(0, 0, 0, 0.4);
-            box-shadow: inset 0px 2px 7px 0px rgba(0, 0, 0, 0.4);
-    border-width: 1px;
-    border-style: solid;
-    -webkit-border-image: -webkit-gradient(linear, 0 100%, 0 0, from(#003b01), to(rgba(255, 255, 255, 0))) 1 100%;
-    -webkit-border-image: -webkit-linear-gradient(bottom, #003b01, rgba(255, 255, 255, 0)) 1 100%;
-    -o-border-image: -o-linear-gradient(bottom, #003b01, rgba(255, 255, 255, 0)) 1 100%;
-    border-image: -webkit-gradient(linear, left bottom, left top, from(#003b01), to(rgba(255, 255, 255, 0))) 1 100%;
-    border-image: linear-gradient(to top, #003b01, rgba(255, 255, 255, 0)) 1 100%;
-    border-top: none;
-    border-bottom: 1px solid #003b01;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(1%, #2f9001), to(#ffffff));
-    background-image: -webkit-linear-gradient(bottom, #2f9001 1%, #ffffff);
-    background-image: -o-linear-gradient(bottom, #2f9001 1%, #ffffff);
-    background-image: linear-gradient(to top, #2f9001 1%, #ffffff); }
+    -webkit-box-shadow: 6px 6px 11px 3px rgba(0, 0, 0, 0.4);
+            box-shadow: 6px 6px 11px 3px rgba(0, 0, 0, 0.4);
+    background: #2e9100 url("../images/coop-item-bg-2.png") 0 0 no-repeat;
+    background-size: 100% 100%;
+    overflow: hidden; }
     .cooperation-item h3, .cooperation-item h4 {
       font-size: 24px;
       text-align: center;
-      background: -webkit-linear-gradient(#39863a 25%, #004b02 75%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent; }
+      color: #fff;
+      text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.4); }
     .cooperation-item h4 {
       font-style: italic; }
     .cooperation-item p {
-      padding-top: 20px;
+      padding-top: 25px;
       text-align: center;
       position: static;
       font-size: 18px;
       line-height: 1.3;
       color: #fff;
-      text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3); }
+      text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3); }
       .cooperation-item p:after {
         content: '';
         display: block;
@@ -1207,6 +1216,6 @@ body * {
     .cooperation h2 {
       font-size: 36px; }
     .cooperation p {
-      padding-top: 10px; }
+      padding-top: 20px; }
     .cooperation .cooperation-item {
       margin-bottom: 15px; } }
