--- a/src/scss/_about-us.scss
+++ b/src/scss/_about-us.scss
@@ -17,14 +17,39 @@
     }
   }
   &-description {
-    p {
-      margin: 30px 0;
-      padding: 20px;
-      background: $green;
+    .dark-chat-bubble,
+    .light-chat-bubble {
+      position: relative;
+      margin: 10px 0;
+      font-size: $font-m;
+      padding: 15px 10px;
+      border-top-right-radius: 15px;
+      border-top-left-radius: 15px;
+      height: auto;
+      width: auto;
+      overflow: hidden;
+      p {
+        height: 100%;
+        display: inline-block;
+        padding: 10px;
+        text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.3);
+      }
+    }
+    .dark-chat-bubble {
       color: $primary-light;
-      font-size: $font-l;
-      text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
-      box-shadow: -3px 3px 2px 0px rgba(0,0,0,0.3);
+      background: $green;
+      border-bottom-left-radius: 15px;
+      box-shadow: inset 0px 0px 22px 1px $primary-light;
+      border: 1px solid $green;
+    }
+    .light-chat-bubble {
+      color: $font-darkest-green;
+      border: $green;
+      background: #fafafa;
+      border-bottom-right-radius: 15px;
+      border: 1px solid $green;
+      display: inline-block;
+      box-shadow: inset 0px 0px 33px 1px $green;
     }
   }
   h2 {
@@ -115,11 +140,7 @@
       margin-right: 15px;
     }
     .about-description {
-      p {
-        font-size: $font-m;
-        padding: 15px;
-        margin: 20px 0;
-      }
+
     }
     h2, h3 {
       font-size: $font-l;
