--- a/src/scss/_cooperation.scss
+++ b/src/scss/_cooperation.scss
@@ -1,7 +1,6 @@
 .cooperation {
   display: none;
   h2 {
-    //font-size: $font-xl;
     font-size: 48px;
     padding: 20px;
     text-align: center;
@@ -24,44 +23,30 @@
     height: 300px;
     position: relative;
     width: 300px;
-    padding: 15px;
+    padding:  25px 15px 15px 15px;
     margin-bottom: 40px;
-    box-shadow: inset 0px 2px 7px 0px rgba(0,0,0,0.4);
-    //border gradient
-    border-width: 1px;
-    border-style: solid;
-    -webkit-border-image:
-            -webkit-gradient(linear, 0 100%, 0 0, from($font-darkest-contacts), to(rgba(255, 255, 255, 0))) 1 100%;
-    -webkit-border-image:
-            -webkit-linear-gradient(bottom, $font-darkest-contacts, rgba(255, 255, 255, 0)) 1 100%;
-    -moz-border-image:
-            -moz-linear-gradient(bottom, $font-darkest-contacts, rgba(255, 255, 255, 0)) 1 100%;
-    -o-border-image:
-            -o-linear-gradient(bottom, $font-darkest-contacts, rgba(255, 255, 255, 0)) 1 100%;
-    border-image:
-            linear-gradient(to top, $font-darkest-contacts, rgba(255, 255, 255, 0)) 1 100%;
-    border-top: none;
-    border-bottom: 1px solid $font-darkest-contacts;
-    //background gradient
-    background-image: linear-gradient(to top, #2f9001 1%, #ffffff);
+    box-shadow: 6px 6px 11px 3px rgba(0,0,0,.4);
+    background: $green url("../images/coop-item-bg-2.png") 0 0 no-repeat;
+    background-size: 100% 100%;
+    overflow: hidden;
     h3, h4 {
       font-size: $font-l;
       text-align: center;
-      background: -webkit-linear-gradient(#39863a 25%, #004b02 75%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      color: $primary-light;
+      text-shadow: 3px 3px 3px rgba(255,255,255,.4);
+      //text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
     }
     h4 {
       font-style: italic;
     }
     p {
-      padding-top: 20px;
+      padding-top: 25px;
       text-align: center;
       position: static;
       font-size: $font-m;
       line-height: 1.3;
       color: $primary-light;
-      text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
+      text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
       &:after {
         content: '';
         display: block;
@@ -101,7 +86,7 @@
       font-size: $font-xl;
     }
     p {
-      padding-top: 10px;
+      padding-top: 20px;
     }
 
     .cooperation-item {
